# tauri-notes

./: .gitignore  package.json  pnpm-lock.yaml
chat-application/: CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
chat-application/src/: App.css  App.jsx
chat-application/src-tauri/: Cargo.toml  tauri.conf.json
chat-application/src-tauri/src/: lib.rs
chat-application/src/components/: ChatWindow.jsx  Sidebar.jsx
chat-application/src/components/modals/: BrowseRoomsModal.jsx  CreateRoomModal.jsx  DeleteRoomModal.jsx  LeaveRoomModal.jsx  LoginSignupModal.jsx  Modal.jsx  RenameModal.jsx  SearchUserModal.jsx
react-vite-demo/: README.md  package.json  pnpm-lock.yaml
react-vite-demo/src/: App.css  App.tsx
react-vite-demo/src-tauri/: Cargo.toml  tauri.conf.json
react-vite-demo/src-tauri/src/: main.rs
rust/1 Getting Started/: main.rs
rust/2 Guessing Game/guessing_game/src/: main.rs
rust/3 Common Programming Concept/controlflow/src/: main.rs
rust/3 Common Programming Concept/functions/src/: main.rs
rust/3 Common Programming Concept/variable/src/: main.rs
rust/4 Ownership/basics/src/: main.rs
rust/5 Struct/hellomethod/: Cargo.toml
rust/5 Struct/hellomethod/src/: main.rs
rust/5 Struct/hellostruct/: Cargo.toml
rust/5 Struct/hellostruct/src/: main.rs
rust/5 Struct/rectangle/src/: main.rs
rust/Side Projects/z1wordconter/: Cargo.toml
rust/Side Projects/z1wordconter/src/: data.txt  main.rs
rust/Side Projects/z2filehandling/: Cargo.toml
rust/Side Projects/z2filehandling/src/: main.rs
